k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mkjs-nginx
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_MANAGER_CLUSTER_ISSUER}
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: ${INGRESS_CLASS_NAME}
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mkjs-nginx
                port:
                  number: 80
  tls:
    - hosts:
        - ${INGRESS_HOST}
      secretName: mkjs-ingress-tls
